[package]
authors = ["dolly-parseton <dolly.parseton@gmail.com>"]
edition = "2018"
name = "libregf-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
libregf-sys = {path = "libregf-sys"}
