[package]
authors = ["dolly-parseton <dolly-parseton@gmail.com>"]
build = "build.rs"
edition = "2018"
name = "libregf-sys"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# byteorder = "1.4.2"
# chrono = "0.4"
# errno = "0.2.7"

[build-dependencies]
autotools = "0.2"
bindgen = "0.53.1"
